template is ready with bootstrap

--- a/pages/achivments.html
+++ b/pages/achivments.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El-Salam Collage School</title>
+    <title>El-Salam Collage School- Achievement</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
         integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-primary">
         <div class="container-fluid container d-flex flex-row">
             <a class="navbar-brand mr-5" href="#">
-                <img src="img/logo.png" width="60px" height="50px" alt="">
+                <img src="../img/logo.png" idth="60px" height="50px" alt="">
                 El-Salam Collage</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
                 aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,30 +30,25 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarID">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    <a class="nav-link active" aria-current="page" href="pages/achievement.html">Achivements</a>
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="achievements.html">Achivements</a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="container">
 
-        <!-- landing section -Boody -->
-        <main id="main">
-
-            <h1>Welcome to EL-Salam Collage School Website</h1>
-        </main>
-        <!-- ? about section -Boody -->
-        <section id="about">
-            <h2>About</h2>
+        <!--* Achievement section -Amr -->
+        <section id="achievements">
+            <h2>Achievement</h2>
         </section>
-        <!-- ? History of the school section -->
-        <section id="history">
-            <h2>History</h2>
+        <!-- * teachers of the school section - Amr -->
+        <section id="teachers">
+            <h2>Teachers</h2>
         </section>
-        <!-- * Activity Section - Amr -->
-        <section id="activity">
-            <h2>Activities</h2>
+        <!-- ? comments Section - Boody -->
+        <section id="comments">
+            <h2>Comments</h2>
         </section>
 
         <!-- Contact us Section -->
@@ -63,7 +58,7 @@
 
     </div>
     <!-- Scripts links -->
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
