adds normaillze css file

--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El-Salam Collage School- Achievement</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
@@ -25,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarID">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                    <a class="nav-link active" aria-current="page" href="achievements.html">Achivements</a>
+                    <a class="nav-link active" aria-current="page" href="achievement.html">Achivements</a>
                 </div>
             </div>
         </div>
@@ -52,6 +51,7 @@
 
     </div>
     <!-- Scripts links -->
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/script.js"></script>
 </body>
 
