--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -12,19 +12,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-primary">
-        <div class="container-fluid container d-flex flex-row">
-            <a class="navbar-brand mr-5" href="#">
-                <img src="../img/logo.png" idth="60px" height="50px" alt="">
-                El-Salam Collage</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
-                aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-main">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold ms-lg-5" href="#">
+                <img src="../img/logo.png" width="50px" height="45px" alt="">
+                El-Salam Collage
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarID">
+            <div class="collapse navbar-collapse justify-content-end me-lg-5" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                    <a class="nav-link active" aria-current="page" href="achievement.html">Achivements</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link active" href="achievement.html">Achivements</a>
                 </div>
             </div>
         </div>
