--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El-Salam Collage School- Achievement</title>
+    <title>El-Salam College School- Achievement</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <a class="navbar-brand fw-bold ms-lg-5" href="#">
                 <img src="../img/logo.png" width="50px" height="45px" alt="">
-                El-Salam Collage
+                El-Salam College
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,7 +107,7 @@
                     <!-- ./End Contact Form -->
                 </div> <!-- end row -->
                 <div class="row">
-                    <div class="col-md-4 m-5">
+                    <div class="col-md-4 mt-5">
                         <div class="address-block contact-meta-block">
                             <i class="tf-ion-android-pin"></i>
                             <h4>Our Location</h4>
@@ -119,7 +119,7 @@
 
                         </div>
                     </div>
-                    <div class="col-md-4 m-5">
+                    <div class="col-md-4 mt-5">
                         <div class="phone-block contact-meta-block">
                             <i class="tf-ion-ios-telephone"></i>
                             <h4>Call Us</h4>
