--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -61,10 +61,10 @@
                 </div>
                 <div class="row">
                     <!-- Contact Details -->
-                    <div class="col-md-6" style="background: url(../img/map.png);
+                    <a class="col-md-6" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" style="background: url(../img/map.png);
                     background-size: 38rem;
                     background-position: center;">
-                    </div>
+                    </a>
                     <!-- / End Contact Details -->
 
                     <!-- Contact Form -->
