--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -7,42 +7,128 @@
     <title>El-Salam College School- Achievement</title>
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-main">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-main fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold ms-lg-5" href="#">
-                <img src="../img/logo.png" width="50px" height="45px" alt="">
+            <a class="navbar-brand fw-bold ms-lg-5 text-dark" href="#">
+                <img src="../img/logo.png" width="50px" height="45px" alt="" />
                 El-Salam College
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end me-lg-5" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                    <a class="nav-link active" href="achievement.html">Achivements</a>
-                </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../index.html" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Home
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="../index.html">Homepage</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="../index.html#about">About</a></li>
+                            <li><a class="dropdown-item" href="../index.html#history">History</a></li>
+                            <li><a class="dropdown-item" href="../index.html#activity">Activities</a></li>
+                            <li><a class="dropdown-item" href="../index.html#contactus">Contact Us</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="achievement.html" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Achivements
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#achievements">Achievements</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#teachers">Teachers</a></li>
+                            <li><a class="dropdown-item" href="#comments">Comments</a></li>
+                            <li><a class="dropdown-item" href="#contact us">Contact Us</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
+        </div>
     </nav>
-    <div class="container">
+    <div class="container mt-4">
 
         <!--* Achievement section -Amr -->
-        <section id="achievements">
-            <h2>Achievement</h2>
+        <section id="achievements" class="py-5 text-center align-items-center">
+            <h2 class="special-heading">Achievement</h2>
         </section>
         <!-- * teachers of the school section - Amr -->
-        <section id="teachers">
-            <h2>Teachers</h2>
+        <section id="teachers" class="py-5 text-center align-items-center">
+            <h2 class="special-heading">Teachers</h2>
         </section>
         <!-- ? comments Section - Boody -->
-        <section id="comments">
-            <h2>Comments</h2>
+        <section id="comments" class="py-5 text-center">
+            <h2 class="special-heading">comments</h2>
+            <div id="one" class="carousel slide my-5" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item text-center active">
+                        <div class="d-block w-50 bg-main p-4 m-auto">
+                            <h6 class="text-capitalize h4 ">mohammmed</h6>
+                            <p class="lead">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                                incidunt quas laborum nihil architecto aut qui odio quod totam
+                                odit
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-block w-50 bg-main p-4 m-auto">
+                            <h6 class="text-capitalize h4">ibrahim</h6>
+                            <p class="lead">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                                incidunt quas laborum nihil architecto aut qui odio quod totam
+                                odit
+                            </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="d-block w-50 bg-main p-4 m-auto">
+                            <h6 class="text-capitalize h4">adel</h6>
+                            <p class="lead">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                                incidunt quas laborum nihil architecto aut qui odio quod totam
+                                odit
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="d-block w-50 bg-main p-4 m-auto">
+                            <h6 class="text-capitalize h4">ramy</h6>
+                            <p class="lead">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                                incidunt quas laborum nihil architecto aut qui odio quod totam
+                                odit
+                            </p>
+                        </div>
+                    </div>
+                    <button type="button" class="carousel-control-prev" data-bs-target="#one" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon  bg-main" aria-hidden="true"></span>
+                        <span class="visually-hidden">prev</span>
+                    </button>
+                    <button type="button" class="carousel-control-next" data-bs-target="#one" data-bs-slide="next">
+                        <span class="carousel-control-next-icon bg-main" aria-hidden="true"></span>
+                        <span class="visually-hidden">next</span>
+                    </button>
+
+                </div>
+            </div>
         </section>
 
         <!-- Contact us Section -->
@@ -51,105 +137,94 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="title text-center">
-                            <h2 style="border-bottom: 3px solid black;width: auto;">
+                            <h2 class="special-heading mb-4">
                                 Contact Us
                             </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi
-                                itaque, obcaecati atque sit!</p>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Illum reiciendis quasi itaque, obcaecati atque sit!
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <!-- Contact Details -->
-                    <a class="col-md-6" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA" style="background: url(../img/map.png);
-                    background-size: 38rem;
-                    background-position: center;">
-                    </a>
+                    <a class="col-md-6 map" href="https://goo.gl/maps/fGKBPpdDYTNJyH3MA"></a>
                     <!-- / End Contact Details -->
 
                     <!-- Contact Form -->
                     <div class="contact-form col-md-6">
                         <form id="contact-form" method="post" action="sendmail.php" role="form" novalidate="novalidate">
-
                             <div class="form-group">
-                                <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
+                                <input type="text" placeholder="Your Name" class="form-control input" name="name"
+                                    id="name" />
                             </div>
 
                             <div class="form-group">
-                                <input type="email" placeholder="Your Email" class="form-control" name="email"
-                                    id="email">
+                                <input type="email" placeholder="Your Email" class="form-control input" name="email"
+                                    id="email" />
                             </div>
 
                             <div class="form-group">
-                                <input type="text" placeholder="Subject" class="form-control" name="subject"
-                                    id="subject">
+                                <input type="text" placeholder="Subject" class="form-control input" name="subject"
+                                    id="subject" />
                             </div>
 
                             <div class="form-group">
-                                <textarea rows="6" placeholder="Message" class="form-control" name="message"
+                                <textarea rows="6" placeholder="Message" class="form-control input" name="message"
                                     id="message"></textarea>
                             </div>
 
-                            <!-- <div id="success" class="success">
-                                Thank you. The Mailman is on His Way :)
-                            </div>
-
-                            <div id="error" class="error">
-                                Sorry, don't know what happened. Try later :(
-                            </div> -->
-
                             <div id="cf-submit" class="align-self-center">
-                                <button type="button" id="contact-submit" class="btn btn-dark">Submit</button>
+                                <button type="button" id="contact-submit" class="btn btn-dark contactbtn">
+                                    Submit
+                                </button>
                             </div>
-
                         </form>
                     </div>
                     <!-- ./End Contact Form -->
-                </div> <!-- end row -->
+                </div>
+                <!-- end row -->
                 <div class="row">
-                    <div class="col-md-4 mt-5">
+                    <div class="col-md-4 mt-4">
                         <div class="address-block contact-meta-block">
-                            <i class="tf-ion-android-pin"></i>
-                            <h4>Our Location</h4>
-                            <p>
-                                14/05, Stockhome <br>
-                                Victori Palace , United States <br>
-
+                            <i class="d-inline fs-4 bi bi-pin-map-fill"></i>
+                            <h4 class="d-inline">Our Location</h4>
+                            <p class="arabic text-start">
+                                5 متفرع من، جسر السويس <br />
+                                سراى القبة، محافظة القاهرة <br />
                             </p>
-
                         </div>
                     </div>
-                    <div class="col-md-4 mt-5">
+                    <div class="col-md-4 mt-4">
                         <div class="phone-block contact-meta-block">
-                            <i class="tf-ion-ios-telephone"></i>
-                            <h4>Call Us</h4>
-                            <p>
-                                Office: (03) 9283 2617 <br>
-                                Fax: +61 3827 3590
+                            <i class="d-inline fs-4 bi bi-telephone-fill"></i>
+                            <h4 class="d-inline">Call Us</h4>
+                            <p class="fs-4">
+                                Office: 0222580267
                             </p>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mt-4">
                         <div class="social-icons-block contact-meta-block">
-                            <i class="tf-ion-ios-contact"></i>
-                            <h4>We are social</h4>
-                            <ul class="list-inline social-icon">
-                                <li class="list-inline-item"><a href=""><i class="tf-ion-social-facebook"></i></a>
+                            <i class="d-inline fs-4 bi bi-chat-dots-fill"></i>
+                            <h4 class="d-inline"> We are social</h4>
+                            <ul class="ms-4 list-inline social-icon">
+                                <li class="list-inline-item">
+                                    <a href="#"><i class="fs-2 text-muted bi bi-facebook"></i></a>
                                 </li>
-                                <li class="list-inline-item"><a href=""><i class="tf-ion-social-twitter"></i></a>
+                                <li class="list-inline-item">
+                                    <a href="#"><i class="fs-2 text-muted bi bi-twitter"></i></a>
                                 </li>
-                                <li class="list-inline-item"><a href=""><i class="tf-ion-social-linkedin"></i></a>
-                                </li>
-                                <li class="list-inline-item"><a href=""><i class="tf-ion-social-dribbble"></i></a>
-                                </li>
-                                <li class="list-inline-item"><a href=""><i class="tf-ion-social-instagram"></i></a>
+                                <li class="list-inline-item">
+                                    <a href="#"><i class="fs-2 text-muted bi bi-linkedin"></i></a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-
-            </div> <!-- end container -->
+            </div>
+            <!-- end container -->
         </section>
 
     </div>
@@ -173,7 +248,8 @@
         </ul>
     </footer>
     <!-- Scripts links -->
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <script src="../js/script.js"></script>
 
 </body>
