teachers + activties section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Home
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-menu-dark">
               <li><a class="dropdown-item" href="index.html">Homepage</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -45,7 +45,7 @@
               aria-expanded="false">
               Achivements
             </a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu dropdown-menu-dark">
               <li><a class="dropdown-item" href="pages/achievement.html#achievements">Achievements</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -73,8 +73,8 @@
   </main>
   <div class="container">
     <!-- ? about section -Boody -->
-    <section id="about" class="mt-5 text-center py-5">
-      <h2 class="special-heading mb-4 mt-5">About</h2>
+    <section id="about" class="text-center py-5">
+      <h2 class="special-heading mb-4 mt-5">تعرف علينا</h2>
       <div class="d-flex justify-content-around align-items-center flex-column flex-lg-row">
         <div class="text-start d-flex flex-lg-column me-lg-5 justify-content-center">
           <div class="card bg-main p-3 mb-2">
@@ -103,7 +103,7 @@
     </section>
     <!-- ? History of the school section -->
     <section id="history" class="py-5 text-center align-items-center">
-      <h2 class="special-heading mt-5">History</h2>
+      <h2 class="special-heading mt-5">تاريخنا</h2>
       <div class="d-flex mt-5 justify-content-between align-items-center flex-column flex-md-row">
         <div class="img-fluid">
           <img src="img/banner.jpg" class="img-fluid" alt="" />
@@ -120,7 +120,53 @@
     </section>
     <!-- * Activity Section - Amr -->
     <section id="activity" class="py-5 text-center align-items-center">
-      <h2 class="special-heading">Activities</h2>
+      <h2 class="special-heading">الأنشطة</h2>
+      <div class="container px-4">
+        <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+          <div class="d-flex flex-column align-items-start gap-2">
+            <h3 class="fw-bold">Left-aligned title explaining these awesome features</h3>
+            <p class="text-muted">Paragraph of text beneath the heading to explain the heading. We'll add onto it with
+              another sentence and probably just keep going until we run out of words.</p>
+          </div>
+          <div class="row row-cols-1 row-cols-sm-2 g-4">
+            <div class="d-flex flex-column gap-2 border border-muted border-2">
+              <div
+                class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                <i class="text- bi bi-rocket-fill"></i>
+              </div>
+              <h4 class="fw-semibold mb-0">Featured title</h4>
+              <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+            </div>
+
+            <div class="d-flex flex-column gap-2 border border-muted border-2">
+              <div
+                class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                <i class="text- bi bi-person-plus-fill"></i>
+              </div>
+              <h4 class="fw-semibold mb-0">Featured title</h4>
+              <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+            </div>
+
+            <div class="d-flex flex-column gap-2 border border-muted border-2">
+              <div
+                class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                <i class="text- bi bi-book"></i>
+              </div>
+              <h4 class="fw-semibold mb-0">Featured title</h4>
+              <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+            </div>
+
+            <div class="d-flex flex-column gap-2 border border-muted border-2">
+              <div
+                class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
+                <i class="text- bi bi-check2-square"></i>
+              </div>
+              <h4 class="fw-semibold mb-0">Featured title</h4>
+              <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Contact us Section -->
@@ -130,7 +176,7 @@
           <div class="col-12">
             <div class="title text-center">
               <h2 class="special-heading mb-4">
-                Contact Us
+                تواصل معنا
               </h2>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -203,10 +249,10 @@
                   <a href="#"><i class="fs-2 text-muted bi bi-facebook"></i></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#"><i class="fs-2 text-muted bi bi-twitter"></i></a>
+                  <a href="#"><i class="fs-2 text-muted bi bi-whatsapp"></i></a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#"><i class="fs-2 text-muted bi bi-linkedin"></i></a>
+                  <a href="#"><i class="fs-2 text-muted bi bi-messenger"></i></a>
                 </li>
               </ul>
             </div>
