--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -31,7 +31,7 @@
                             aria-expanded="false">
                             Home
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu dropdown-menu-dark">
                             <li><a class="dropdown-item" href="../index.html">Homepage</a></li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -47,7 +47,7 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Achivements
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu dropdown-menu-dark">
                             <li><a class="dropdown-item" href="#achievements">Achievements</a></li>
                             <li>
                                 <hr class="dropdown-divider">
@@ -66,15 +66,154 @@
 
         <!--* Achievement section -Amr -->
         <section id="achievements" class="py-5 text-center align-items-center">
-            <h2 class="special-heading">Achievement</h2>
+            <h2 class="special-heading">الإنجازات</h2>
+            <div class="album py-5 bg-light">
+                <div class="container">
+
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                                    <title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                        fill="#eceeef" dy=".3em">Thumbnail</text>
+                                </svg>
+
+                                <div class="card-body">
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                                    <title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                        fill="#eceeef" dy=".3em">Thumbnail</text>
+                                </svg>
+
+                                <div class="card-body">
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                                    <title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                        fill="#eceeef" dy=".3em">Thumbnail</text>
+                                </svg>
+
+                                <div class="card-body">
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                                    <title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
+                                        fill="#eceeef" dy=".3em">Thumbnail</text>
+                                </svg>
+
+                                <div class="card-body">
+                                    <p class="card-text">This is a wider card with supporting text below as a natural
+                                        lead-in to additional content. This content is a little bit longer.</p>
+                                    <div class="d-flex justify-content-center align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- * teachers of the school section - Amr -->
-        <section id="teachers" class="py-5 text-center align-items-center">
-            <h2 class="special-heading">Teachers</h2>
+        <section id="teachers" class="mt-5 text-center py-5">
+            <h2 class="special-heading mb-5 mt-5">المعلمون</h2>
+            <div class="row">
+                <div class="card bg-third m-3" style="width:250px">
+                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
+                        style="width:10rem;height: 10rem;"
+                        src='https://avataaars.io/?avatarStyle=Circle&topType=LongHairStraight&accessoriesType=Blank&hairColor=BrownDark&facialHairType=Blank&clotheType=BlazerShirt&eyeType=Default&eyebrowType=Default&mouthType=Default&skinColor=Light' />
+                    <div class="card-body">
+                        <h4 class="card-title">Ms.Mariam</h4>
+                        <p class="card-text">Some example text some example text. Ms.Mariam is a teacher
+                        </p>
+                        <a href="#" class="btn btn-light text-dark">See Profile</a>
+                    </div>
+                </div>
+                <div class="card bg-third m-3" style="width:250px">
+                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
+                        style="width:10rem;height: 10rem;"
+                        src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairShortCurly&accessoriesType=Sunglasses&hairColor=Black&facialHairType=Blank&clotheType=CollarSweater&clotheColor=Red&eyeType=WinkWacky&eyebrowType=Angry&mouthType=Twinkle&skinColor=Yellow' />
+                    <div class="card-body">
+                        <h4 class="card-title">Mr.Mohammed</h4>
+                        <p class="card-text">Some example text some example. Mr.Mohammed is a teacher
+                        </p>
+                        <a href="#" class="btn btn-light text-dark">See Profile</a>
+                    </div>
+                </div>
+                <div class="card bg-third m-3" style="width:250px">
+                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
+                        style="width:10rem;height: 10rem;"
+                        src='https://avataaars.io/?avatarStyle=Circle&topType=Hijab&accessoriesType=Sunglasses&hatColor=Gray02&clotheType=CollarSweater&clotheColor=Heather&eyeType=Close&eyebrowType=RaisedExcited&mouthType=Twinkle&skinColor=Yellow' />
+                    <div class="card-body">
+                        <h4 class="card-title">Ms.Assma</h4>
+                        <p class="card-text">Some example text some example text. Ms.Assma is a teacher
+                        </p>
+                        <a href="#" class="btn btn-light text-dark">See Profile</a>
+                    </div>
+                </div>
+                <div class="card bg-third m-3" style="width:250px">
+                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
+                        style="width:10rem;height: 10rem;"
+                        src='https://avataaars.io/?avatarStyle=Circle&topType=ShortHairTheCaesarSidePart&accessoriesType=Blank&hairColor=Brown&facialHairType=MoustacheMagnum&facialHairColor=Brown&clotheType=CollarSweater&clotheColor=White&eyeType=Default&eyebrowType=UpDownNatural&mouthType=Serious&skinColor=Yellow' />
+                    <div class="card-body">
+                        <h4 class="card-title">Mr.Salah</h4>
+                        <p class="card-text">Some example text some example text. Mr.Salah is a teacher
+                        </p>
+                        <a href="#" class="btn btn-light text-dark">See Profile</a>
+                    </div>
+                </div>
+            </div class="row">
+
         </section>
         <!-- ? comments Section - Boody -->
         <section id="comments" class="py-5 text-center">
-            <h2 class="special-heading">comments</h2>
+            <h2 class="special-heading">التعليقات</h2>
             <div id="one" class="carousel slide my-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item text-center active">
@@ -138,7 +277,7 @@
                     <div class="col-12">
                         <div class="title text-center">
                             <h2 class="special-heading mb-4">
-                                Contact Us
+                                تواصل معنا
                             </h2>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
