--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-lg-auto me-lg-5 mb-2 mb-lg-0">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Home
@@ -37,6 +37,7 @@
               <li><a class="dropdown-item" href="#about">About</a></li>
               <li><a class="dropdown-item" href="#history">History</a></li>
               <li><a class="dropdown-item" href="#activity">Activities</a></li>
+              <li><a class="dropdown-item" href="#comments">Comments</a></li>
               <li><a class="dropdown-item" href="#contactus">Contact Us</a></li>
             </ul>
           </li>
@@ -79,7 +80,7 @@
         <div class="text-start d-flex flex-lg-column me-lg-5 justify-content-center">
           <div class="card bg-main p-3 mb-2">
             <div class="card-body text-center">
-              <div class="card-title text-capitalize h4">we are</div>
+              <div class="card-title text-capitalize h4">Our Misson</div>
               <div class="card-text lead">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Soluta, error.
@@ -88,7 +89,7 @@
           </div>
           <div class="card bg-main p-3 mb-2">
             <div class="card-body text-center">
-              <div class="card-title text-capitalize h4">our target</div>
+              <div class="card-title text-capitalize h4">Our Vision</div>
               <div class="card-text lead">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Soluta, error.
@@ -165,6 +166,65 @@
               <p class="text-muted">Paragraph of text beneath the heading to explain the heading.</p>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ? comments Section - Boody -->
+    <section id="comments" class="py-5 text-center">
+      <h2 class="special-heading">التعليقات</h2>
+      <div id="one" class="carousel slide my-5" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item text-center active">
+            <div class="d-block w-50 bg-main p-4 m-auto">
+              <h6 class="text-capitalize h4 ">mohammmed</h6>
+              <p class="lead">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                incidunt quas laborum nihil architecto aut qui odio quod totam
+                odit
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block w-50 bg-main p-4 m-auto">
+              <h6 class="text-capitalize h4">ibrahim</h6>
+              <p class="lead">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                incidunt quas laborum nihil architecto aut qui odio quod totam
+                odit
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block w-50 bg-main p-4 m-auto">
+              <h6 class="text-capitalize h4">adel</h6>
+              <p class="lead">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                incidunt quas laborum nihil architecto aut qui odio quod totam
+                odit
+              </p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div class="d-block w-50 bg-main p-4 m-auto">
+              <h6 class="text-capitalize h4">ramy</h6>
+              <p class="lead">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. At
+                incidunt quas laborum nihil architecto aut qui odio quod totam
+                odit
+              </p>
+            </div>
+          </div>
+          <button type="button" class="carousel-control-prev" data-bs-target="#one" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon  bg-main" aria-hidden="true"></span>
+            <span class="visually-hidden">prev</span>
+          </button>
+          <button type="button" class="carousel-control-next" data-bs-target="#one" data-bs-slide="next">
+            <span class="carousel-control-next-icon bg-main" aria-hidden="true"></span>
+            <span class="visually-hidden">next</span>
+          </button>
+
         </div>
       </div>
     </section>
