--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-lg-auto me-lg-5 mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="../index.html" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -39,6 +39,7 @@
                             <li><a class="dropdown-item" href="../index.html#about">About</a></li>
                             <li><a class="dropdown-item" href="../index.html#history">History</a></li>
                             <li><a class="dropdown-item" href="../index.html#activity">Activities</a></li>
+                            <li><a class="dropdown-item" href="../index.html#comments">Comments</a></li>
                             <li><a class="dropdown-item" href="../index.html#contactus">Contact Us</a></li>
                         </ul>
                     </li>
@@ -65,100 +66,85 @@
     <div class="container mt-4">
 
         <!--* Achievement section -Amr -->
-        <section id="achievements" class="py-5 text-center align-items-center">
+        <section id="achievements" class="pt-5 text-center align-items-center">
             <h2 class="special-heading">الإنجازات</h2>
-            <div class="album py-5 bg-light">
+            <!-- Start Portfolio -->
+            <div class="portfolio">
                 <div class="container">
-
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-                                        fill="#eceeef" dy=".3em">Thumbnail</text>
-                                </svg>
-
-                                <div class="card-body">
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="mt-5">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem temporibus impedit
+                            quam unde vero hic aliquam, commodi tenetur eum obcaecati ipsa nostrum distinctio
+                            repellendus repudiandae, quidem libero placeat? Laboriosam, illum!
+                        </p>
+                    </div>
+                    <ul class="shuffle">
+                        <li class="active">All</li>
+                        <li>المدرسة</li>
+                        <li>الإدارة</li>
+                        <li>الطلبه</li>
+                    </ul>
+                </div>
+                <div class="imgs-container">
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
                         </div>
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-                                        fill="#eceeef" dy=".3em">Thumbnail</text>
-                                </svg>
-
-                                <div class="card-body">
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
                         </div>
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-                                        fill="#eceeef" dy=".3em">Thumbnail</text>
-                                </svg>
-
-                                <div class="card-body">
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
                         </div>
-
-                        <div class="col">
-                            <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                    preserveAspectRatio="xMidYMid slice" focusable="false">
-                                    <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-                                        fill="#eceeef" dy=".3em">Thumbnail</text>
-                                </svg>
-
-                                <div class="card-body">
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <div class="d-flex justify-content-center align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <img src="https://picsum.photos/300/200" alt="" />
+                        <div class="caption">
+                            <h4>Awesome Image</h4>
+                            <p>Photography</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- End Portfolio -->
         </section>
         <!-- * teachers of the school section - Amr -->
         <section id="teachers" class="mt-5 text-center py-5">
